--- a/wiki/bg/Tree_View.html
+++ b/wiki/bg/Tree_View.html
@@ -16,7 +16,7 @@
 </p>
 <h2><span id=".D0.92.D1.8A.D0.B2.D0.B5.D0.B4.D0.B5.D0.BD.D0.B8.D0.B5"></span><span class="mw-headline" id="&#1042;&#1098;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077;">&#1042;&#1098;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077;</span></h2>
 <p><a class="mw-selflink selflink">&#1044;&#1098;&#1088;&#1074;&#1086;&#1074;&#1080;&#1076;&#1077;&#1085; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;</a> &#1089;&#1077; &#1087;&#1086;&#1103;&#1074;&#1103;&#1074;&#1072; &#1074; &#1075;&#1086;&#1088;&#1085;&#1072;&#1090;&#1072; &#1095;&#1072;&#1089;&#1090; &#1085;&#1072; &#1087;&#1072;&#1085;&#1077;&#1083; <b>Model</b> (&#1072;&#1082;&#1086; <a href="../Combo_View.html" title="Combo View">Combo View</a> &#1077; &#1072;&#1082;&#1090;&#1080;&#1074;&#1077;&#1085;) &#1080;&#1083;&#1080; &#1082;&#1072;&#1090;&#1086; &#1089;&#1072;&#1084;&#1086;&#1089;&#1090;&#1086;&#1103;&#1090;&#1077;&#1083;&#1077;&#1085; &#1087;&#1072;&#1085;&#1077;&#1083;. &#1058;&#1086;&#1081; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072; &#1074;&#1089;&#1080;&#1095;&#1082;&#1080; &#1076;&#1077;&#1092;&#1080;&#1085;&#1080;&#1088;&#1072;&#1085;&#1080; &#1086;&#1090; &#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1080;&#1090;&#1077;&#1083;&#1103; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;, &#1082;&#1086;&#1080;&#1090;&#1086; &#1089;&#1072; &#1095;&#1072;&#1089;&#1090; &#1086;&#1090; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090; &#1085;&#1072; FreeCAD. &#1048;&#1079;&#1075;&#1083;&#1077;&#1076;&#1098;&#1090; &#1085;&#1072; &#1076;&#1098;&#1088;&#1074;&#1086;&#1090;&#1086; &#1077; &#1087;&#1088;&#1077;&#1076;&#1089;&#1090;&#1072;&#1074;&#1103;&#1085;&#1077; &#1085;&#1072; &#1089;&#1090;&#1088;&#1091;&#1082;&#1090;&#1091;&#1088;&#1072;&#1090;&#1072; &#1085;&#1072; <a href="../Document_structure.html" title="Document structure">&#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;</a> &#1080; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072; &#1082;&#1072;&#1082;&#1074;&#1072; &#1080;&#1085;&#1092;&#1086;&#1088;&#1084;&#1072;&#1094;&#1080;&#1103; &#1089;&#1077; &#1079;&#1072;&#1087;&#1080;&#1089;&#1074;&#1072; &#1085;&#1072; &#1076;&#1080;&#1089;&#1082;.
-</p><p>&#1058;&#1077;&#1079;&#1080; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1085;&#1077; &#1077; &#1079;&#1072;&#1076;&#1098;&#1083;&#1078;&#1080;&#1090;&#1077;&#1083;&#1085;&#1086; &#1076;&#1072; &#1089;&#1072; &#1075;&#1077;&#1086;&#1084;&#1077;&#1090;&#1088;&#1080;&#1095;&#1085;&#1080; &#1092;&#1080;&#1075;&#1091;&#1088;&#1080;, &#1074;&#1080;&#1076;&#1080;&#1084;&#1080; &#1074; <a href="../bg/3D_View.html" title="3D View/bg">3D &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;</a>, &#1085;&#1086; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1073;&#1098;&#1076;&#1072;&#1090; &#1080; &#1087;&#1086;&#1076;&#1076;&#1098;&#1088;&#1078;&#1072;&#1097;&#1080; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1079;&#1072; &#1076;&#1072;&#1085;&#1085;&#1080;, &#1089;&#1098;&#1079;&#1076;&#1072;&#1076;&#1077;&#1085;&#1080; &#1089; &#1085;&#1103;&#1082;&#1086;&#1103; &#1086;&#1090; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080;&#1090;&#1077; &#1084;&#1072;&#1089;&#1080; <a href="../Workbenches.html" title="Workbenches">workbenches</a>.
+</p><p>&#1058;&#1077;&#1079;&#1080; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1085;&#1077; &#1077; &#1079;&#1072;&#1076;&#1098;&#1083;&#1078;&#1080;&#1090;&#1077;&#1083;&#1085;&#1086; &#1076;&#1072; &#1089;&#1072; &#1075;&#1077;&#1086;&#1084;&#1077;&#1090;&#1088;&#1080;&#1095;&#1085;&#1080; &#1092;&#1080;&#1075;&#1091;&#1088;&#1080;, &#1074;&#1080;&#1076;&#1080;&#1084;&#1080; &#1074; <a href="../bg/3D_View.html" title="3D View/bg">3D &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;</a>, &#1085;&#1086; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1073;&#1098;&#1076;&#1072;&#1090; &#1080; &#1087;&#1086;&#1076;&#1076;&#1098;&#1088;&#1078;&#1072;&#1097;&#1080; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1079;&#1072; &#1076;&#1072;&#1085;&#1085;&#1080;, &#1089;&#1098;&#1079;&#1076;&#1072;&#1076;&#1077;&#1085;&#1080; &#1089; &#1085;&#1103;&#1082;&#1086;&#1103; &#1086;&#1090; <a href="../bg/Workbenches.html" title="Workbenches/bg">&#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080;&#1090;&#1077; &#1084;&#1072;&#1089;&#1080;</a>.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view.png&amp;filetimestamp=20240720173431&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view.png" decoding="async" width="298" height="280" class="mw-file-element" data-file-width="298" data-file-height="280"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">The Tree View showing various elements in the document.</p>
@@ -153,12 +153,12 @@ Fully expanding the tree reveals the original elements that were used to create 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117203239
+Cached time: 20260117203340
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.117 seconds
-Real time usage: 0.172 seconds
+CPU time usage: 0.130 seconds
+Real time usage: 0.185 seconds
 Preprocessor visited node count: 746/1000000
 Post&#8208;expand include size: 37949/2097152 bytes
 Template argument size: 12168/2097152 bytes
@@ -169,19 +169,19 @@ Unstrip post&#8208;expand size: 2222/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   41.389      1 -total
- 22.34%    9.247      1 Template:Std_Base_navi/bg
- 17.69%    7.323      3 Template:Navigation_menu_2
- 16.53%    6.842      1 Template:Userdocnavi/bg
- 16.52%    6.838      1 Template:Interface_navi/bg
- 11.53%    4.771      2 Template:PropertyData
-  5.39%    2.229      3 Template:Variable
-  5.32%    2.202      2 Template:Caption
-  4.60%    1.903      1 Template:PropertyView
-  4.36%    1.803      1 Template:FALSE
+100.00%   45.005      1 -total
+ 24.15%   10.871      3 Template:Navigation_menu_2
+ 22.79%   10.258      1 Template:Std_Base_navi/bg
+ 16.37%    7.367      1 Template:Interface_navi/bg
+ 12.16%    5.471      1 Template:Userdocnavi/bg
+ 10.22%    4.602      2 Template:PropertyData
+  6.10%    2.744      6 Template:MenuCommand
+  5.44%    2.447      2 Template:Caption
+  5.10%    2.294      3 Template:Variable
+  4.94%    2.224      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260117203238 and revision id 1739662. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260117203340 and revision id 1739664. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
