--- a/wiki/bg/Tree_View.html
+++ b/wiki/bg/Tree_View.html
@@ -153,12 +153,12 @@ Fully expanding the tree reveals the original elements that were used to create 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117203340
+Cached time: 20260117203432
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.130 seconds
-Real time usage: 0.185 seconds
+CPU time usage: 0.149 seconds
+Real time usage: 0.563 seconds
 Preprocessor visited node count: 746/1000000
 Post&#8208;expand include size: 37949/2097152 bytes
 Template argument size: 12168/2097152 bytes
@@ -169,19 +169,19 @@ Unstrip post&#8208;expand size: 2222/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   45.005      1 -total
- 24.15%   10.871      3 Template:Navigation_menu_2
- 22.79%   10.258      1 Template:Std_Base_navi/bg
- 16.37%    7.367      1 Template:Interface_navi/bg
- 12.16%    5.471      1 Template:Userdocnavi/bg
- 10.22%    4.602      2 Template:PropertyData
-  6.10%    2.744      6 Template:MenuCommand
-  5.44%    2.447      2 Template:Caption
-  5.10%    2.294      3 Template:Variable
-  4.94%    2.224      1 Template:TOCright
+100.00%  129.849      1 -total
+ 26.17%   33.977      1 Template:Std_Base_navi/bg
+ 21.79%   28.299      3 Template:Navigation_menu_2
+ 14.23%   18.479      2 Template:PropertyData
+ 10.67%   13.850      1 Template:Userdocnavi/bg
+  9.13%   11.852      1 Template:Interface_navi/bg
+  8.97%   11.646      1 Template:PropertyView
+  7.17%    9.315      5 Template:Version
+  6.31%    8.198     19 Template:KEY
+  4.35%    5.647      6 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260117203340 and revision id 1739664. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260117203432 and revision id 1739664. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
