--- a/wiki/bg/Tree_View.html
+++ b/wiki/bg/Tree_View.html
@@ -20,7 +20,9 @@
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view.png&amp;filetimestamp=20240720173431&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view.png" decoding="async" width="298" height="280" class="mw-file-element" data-file-width="298" data-file-height="280"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">The Tree View showing various elements in the document.</p>
-<h2><span class="mw-headline" id="Working_with_the_Tree_View">Working with the Tree View</span></h2>
+<p><span id="Working_with_the_Tree_View"></span>
+</p>
+<h2><span id=".D0.A0.D0.B0.D0.B1.D0.BE.D1.82.D0.B0_.D1.81_.D0.B4.D1.8A.D1.80.D0.B2.D0.BE.D0.B2.D0.B8.D0.B4.D0.BD.D0.B8.D1.8F_.D0.B8.D0.B7.D0.B3.D0.BB.D0.B5.D0.B4"></span><span class="mw-headline" id="&#1056;&#1072;&#1073;&#1086;&#1090;&#1072;_&#1089;_&#1076;&#1098;&#1088;&#1074;&#1086;&#1074;&#1080;&#1076;&#1085;&#1080;&#1103;_&#1080;&#1079;&#1075;&#1083;&#1077;&#1076;">&#1056;&#1072;&#1073;&#1086;&#1090;&#1072; &#1089; &#1076;&#1098;&#1088;&#1074;&#1086;&#1074;&#1080;&#1076;&#1085;&#1080;&#1103; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;</span></h2>
 <p>By default, whenever a new object is created, it is added to the end of the list in the Tree View. The Tree View allows managing the objects to keep them organized; it permits creating <a href="../Std_Group.html" title="Std Group">groups</a>, moving objects inside groups, moving groups inside other groups, relabeling objects, copying objects, deleting objects, and using options from its <a href="#Context_menu">context menu</a>.
 </p><p>Many operations create objects that are dependent on a previously existing object. In this case, the Tree View shows this relationship by absorbing the older object inside the new object. Expanding and collapsing the objects in the Tree View shows the parametric history of that object. Objects that are deeper inside others are older, while objects that are outside are newer, and are derived from the older objects. By modifying the interior objects, the parametric operations propagate all the way to the top, generating a new result.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_parametric_history.png&amp;filetimestamp=20240720173407&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_parametric_history.png" decoding="async" width="298" height="230" class="mw-file-element" data-file-width="298" data-file-height="230"></a></span>
@@ -153,13 +155,13 @@ Fully expanding the tree reveals the original elements that were used to create 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117203432
+Cached time: 20260117203536
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.149 seconds
-Real time usage: 0.563 seconds
-Preprocessor visited node count: 746/1000000
+CPU time usage: 0.150 seconds
+Real time usage: 0.275 seconds
+Preprocessor visited node count: 747/1000000
 Post&#8208;expand include size: 37949/2097152 bytes
 Template argument size: 12168/2097152 bytes
 Highest expansion depth: 7/100
@@ -169,19 +171,19 @@ Unstrip post&#8208;expand size: 2222/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  129.849      1 -total
- 26.17%   33.977      1 Template:Std_Base_navi/bg
- 21.79%   28.299      3 Template:Navigation_menu_2
- 14.23%   18.479      2 Template:PropertyData
- 10.67%   13.850      1 Template:Userdocnavi/bg
-  9.13%   11.852      1 Template:Interface_navi/bg
-  8.97%   11.646      1 Template:PropertyView
-  7.17%    9.315      5 Template:Version
-  6.31%    8.198     19 Template:KEY
-  4.35%    5.647      6 Template:MenuCommand
+100.00%   47.237      1 -total
+ 21.08%    9.958      1 Template:Std_Base_navi/bg
+ 18.95%    8.950      3 Template:Navigation_menu_2
+ 14.51%    6.854      1 Template:Interface_navi/bg
+ 13.52%    6.388      1 Template:Userdocnavi/bg
+ 12.75%    6.025      2 Template:PropertyData
+  7.32%    3.458      3 Template:Variable
+  5.37%    2.538      2 Template:Caption
+  5.04%    2.382      1 Template:TOCright
+  4.65%    2.197     19 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260117203432 and revision id 1739664. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260117203536 and revision id 1739667. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
