--- a/wiki/bg/Tree_View.html
+++ b/wiki/bg/Tree_View.html
@@ -7,7 +7,7 @@
 <li><a href="../pl/Tree_View.html" class="mw-pt-progress mw-pt-progress--complete" title="Widok drzewa (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Tree_View.html" class="mw-pt-progress mw-pt-progress--low" title="Vista em &aacute;rvore (2% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../sv/Tree_View.html" class="mw-pt-progress mw-pt-progress--low" title="Tree View/sv (2% translated)" lang="sv" dir="ltr">svenska</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
 <li><a href="../ru/Tree_View.html" class="mw-pt-progress mw-pt-progress--high" title="&#1044;&#1088;&#1077;&#1074;&#1086; &#1087;&#1088;&#1086;&#1077;&#1082;&#1090;&#1072; (94% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ja/Tree_View.html" class="mw-pt-progress mw-pt-progress--high" title="&#12484;&#12522;&#12540;&#12499;&#12517;&#12540; (94% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
 <li><a href="../ko/Tree_View.html" class="mw-pt-progress mw-pt-progress--med" title="&#45208;&#47924; &#48372;&#44592;(Tree view) (69% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
@@ -23,7 +23,7 @@
 <p><span id="Working_with_the_Tree_View"></span>
 </p>
 <h2><span id=".D0.A0.D0.B0.D0.B1.D0.BE.D1.82.D0.B0_.D1.81_.D0.B4.D1.8A.D1.80.D0.B2.D0.BE.D0.B2.D0.B8.D0.B4.D0.BD.D0.B8.D1.8F_.D0.B8.D0.B7.D0.B3.D0.BB.D0.B5.D0.B4"></span><span class="mw-headline" id="&#1056;&#1072;&#1073;&#1086;&#1090;&#1072;_&#1089;_&#1076;&#1098;&#1088;&#1074;&#1086;&#1074;&#1080;&#1076;&#1085;&#1080;&#1103;_&#1080;&#1079;&#1075;&#1083;&#1077;&#1076;">&#1056;&#1072;&#1073;&#1086;&#1090;&#1072; &#1089; &#1076;&#1098;&#1088;&#1074;&#1086;&#1074;&#1080;&#1076;&#1085;&#1080;&#1103; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;</span></h2>
-<p>By default, whenever a new object is created, it is added to the end of the list in the Tree View. The Tree View allows managing the objects to keep them organized; it permits creating <a href="../Std_Group.html" title="Std Group">groups</a>, moving objects inside groups, moving groups inside other groups, relabeling objects, copying objects, deleting objects, and using options from its <a href="#Context_menu">context menu</a>.
+<p>&#1055;&#1086; &#1087;&#1086;&#1076;&#1088;&#1072;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077;, &#1082;&#1086;&#1075;&#1072;&#1090;&#1086; &#1089;&#1077; &#1089;&#1098;&#1079;&#1076;&#1072;&#1074;&#1072; &#1085;&#1086;&#1074; &#1086;&#1073;&#1077;&#1082;&#1090;, &#1090;&#1086;&#1081; &#1089;&#1077; &#1076;&#1086;&#1073;&#1072;&#1074;&#1103; &#1082;&#1098;&#1084; &#1082;&#1088;&#1072;&#1103; &#1085;&#1072; &#1089;&#1087;&#1080;&#1089;&#1098;&#1082;&#1072; &#1074; &#1076;&#1098;&#1088;&#1074;&#1086;&#1074;&#1080;&#1076;&#1085;&#1080;&#1103; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;. Tree View &#1087;&#1086;&#1079;&#1074;&#1086;&#1083;&#1103;&#1074;&#1072; &#1091;&#1087;&#1088;&#1072;&#1074;&#1083;&#1077;&#1085;&#1080;&#1077; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;&#1090;&#1077;, &#1079;&#1072; &#1076;&#1072; &#1075;&#1080; &#1087;&#1086;&#1076;&#1076;&#1098;&#1088;&#1078;&#1072; &#1086;&#1088;&#1075;&#1072;&#1085;&#1080;&#1079;&#1080;&#1088;&#1072;&#1085;&#1080;; &#1090;&#1086;&#1081; &#1087;&#1086;&#1079;&#1074;&#1086;&#1083;&#1103;&#1074;&#1072; &#1089;&#1098;&#1079;&#1076;&#1072;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; <a href="../Std_Group.html" title="Std Group">groups</a>, &#1087;&#1088;&#1077;&#1084;&#1077;&#1089;&#1090;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1074;&#1098;&#1090;&#1088;&#1077; &#1074; &#1075;&#1088;&#1091;&#1087;&#1080;, &#1087;&#1088;&#1077;&#1084;&#1077;&#1089;&#1090;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1075;&#1088;&#1091;&#1087;&#1080; &#1074; &#1076;&#1088;&#1091;&#1075;&#1080; &#1075;&#1088;&#1091;&#1087;&#1080;, &#1087;&#1088;&#1077;&#1077;&#1090;&#1080;&#1082;&#1077;&#1090;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;, &#1082;&#1086;&#1087;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;, &#1080;&#1079;&#1090;&#1088;&#1080;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1080; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1086;&#1087;&#1094;&#1080;&#1080; &#1086;&#1090; &#1085;&#1077;&#1075;&#1086;&#1074;&#1086;&#1090;&#1086; <a href="#Context_menu">&#1082;&#1086;&#1085;&#1090;&#1077;&#1082;&#1089;&#1090;&#1085;&#1086; &#1084;&#1077;&#1085;&#1102;</a>.
 </p><p>Many operations create objects that are dependent on a previously existing object. In this case, the Tree View shows this relationship by absorbing the older object inside the new object. Expanding and collapsing the objects in the Tree View shows the parametric history of that object. Objects that are deeper inside others are older, while objects that are outside are newer, and are derived from the older objects. By modifying the interior objects, the parametric operations propagate all the way to the top, generating a new result.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_parametric_history.png&amp;filetimestamp=20240720173407&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_parametric_history.png" decoding="async" width="298" height="230" class="mw-file-element" data-file-width="298" data-file-height="230"></a></span>
 </p>
@@ -155,12 +155,12 @@ Fully expanding the tree reveals the original elements that were used to create 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117203536
+Cached time: 20260117203747
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.150 seconds
-Real time usage: 0.275 seconds
+CPU time usage: 0.116 seconds
+Real time usage: 0.179 seconds
 Preprocessor visited node count: 747/1000000
 Post&#8208;expand include size: 37949/2097152 bytes
 Template argument size: 12168/2097152 bytes
@@ -171,19 +171,19 @@ Unstrip post&#8208;expand size: 2222/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   47.237      1 -total
- 21.08%    9.958      1 Template:Std_Base_navi/bg
- 18.95%    8.950      3 Template:Navigation_menu_2
- 14.51%    6.854      1 Template:Interface_navi/bg
- 13.52%    6.388      1 Template:Userdocnavi/bg
- 12.75%    6.025      2 Template:PropertyData
-  7.32%    3.458      3 Template:Variable
-  5.37%    2.538      2 Template:Caption
-  5.04%    2.382      1 Template:TOCright
-  4.65%    2.197     19 Template:KEY
+100.00%   39.210      1 -total
+ 23.52%    9.221      1 Template:Std_Base_navi/bg
+ 17.61%    6.906      3 Template:Navigation_menu_2
+ 14.72%    5.770      1 Template:Interface_navi/bg
+ 11.90%    4.667      1 Template:PropertyView
+  9.78%    3.836      1 Template:Userdocnavi/bg
+  8.38%    3.287      2 Template:PropertyData
+  5.62%    2.203      3 Template:Variable
+  5.20%    2.039      1 Template:TOCright
+  4.88%    1.913      2 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260117203536 and revision id 1739667. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260117203746 and revision id 1739669. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
