--- a/wiki/bg/Tree_View.html
+++ b/wiki/bg/Tree_View.html
@@ -24,7 +24,7 @@
 </p>
 <h2><span id=".D0.A0.D0.B0.D0.B1.D0.BE.D1.82.D0.B0_.D1.81_.D0.B4.D1.8A.D1.80.D0.B2.D0.BE.D0.B2.D0.B8.D0.B4.D0.BD.D0.B8.D1.8F_.D0.B8.D0.B7.D0.B3.D0.BB.D0.B5.D0.B4"></span><span class="mw-headline" id="&#1056;&#1072;&#1073;&#1086;&#1090;&#1072;_&#1089;_&#1076;&#1098;&#1088;&#1074;&#1086;&#1074;&#1080;&#1076;&#1085;&#1080;&#1103;_&#1080;&#1079;&#1075;&#1083;&#1077;&#1076;">&#1056;&#1072;&#1073;&#1086;&#1090;&#1072; &#1089; &#1076;&#1098;&#1088;&#1074;&#1086;&#1074;&#1080;&#1076;&#1085;&#1080;&#1103; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;</span></h2>
 <p>&#1055;&#1086; &#1087;&#1086;&#1076;&#1088;&#1072;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077;, &#1082;&#1086;&#1075;&#1072;&#1090;&#1086; &#1089;&#1077; &#1089;&#1098;&#1079;&#1076;&#1072;&#1074;&#1072; &#1085;&#1086;&#1074; &#1086;&#1073;&#1077;&#1082;&#1090;, &#1090;&#1086;&#1081; &#1089;&#1077; &#1076;&#1086;&#1073;&#1072;&#1074;&#1103; &#1082;&#1098;&#1084; &#1082;&#1088;&#1072;&#1103; &#1085;&#1072; &#1089;&#1087;&#1080;&#1089;&#1098;&#1082;&#1072; &#1074; &#1076;&#1098;&#1088;&#1074;&#1086;&#1074;&#1080;&#1076;&#1085;&#1080;&#1103; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;. Tree View &#1087;&#1086;&#1079;&#1074;&#1086;&#1083;&#1103;&#1074;&#1072; &#1091;&#1087;&#1088;&#1072;&#1074;&#1083;&#1077;&#1085;&#1080;&#1077; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;&#1090;&#1077;, &#1079;&#1072; &#1076;&#1072; &#1075;&#1080; &#1087;&#1086;&#1076;&#1076;&#1098;&#1088;&#1078;&#1072; &#1086;&#1088;&#1075;&#1072;&#1085;&#1080;&#1079;&#1080;&#1088;&#1072;&#1085;&#1080;; &#1090;&#1086;&#1081; &#1087;&#1086;&#1079;&#1074;&#1086;&#1083;&#1103;&#1074;&#1072; &#1089;&#1098;&#1079;&#1076;&#1072;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; <a href="../Std_Group.html" title="Std Group">groups</a>, &#1087;&#1088;&#1077;&#1084;&#1077;&#1089;&#1090;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1074;&#1098;&#1090;&#1088;&#1077; &#1074; &#1075;&#1088;&#1091;&#1087;&#1080;, &#1087;&#1088;&#1077;&#1084;&#1077;&#1089;&#1090;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1075;&#1088;&#1091;&#1087;&#1080; &#1074; &#1076;&#1088;&#1091;&#1075;&#1080; &#1075;&#1088;&#1091;&#1087;&#1080;, &#1087;&#1088;&#1077;&#1077;&#1090;&#1080;&#1082;&#1077;&#1090;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;, &#1082;&#1086;&#1087;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;, &#1080;&#1079;&#1090;&#1088;&#1080;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1080; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1086;&#1087;&#1094;&#1080;&#1080; &#1086;&#1090; &#1085;&#1077;&#1075;&#1086;&#1074;&#1086;&#1090;&#1086; <a href="#Context_menu">&#1082;&#1086;&#1085;&#1090;&#1077;&#1082;&#1089;&#1090;&#1085;&#1086; &#1084;&#1077;&#1085;&#1102;</a>.
-</p><p>Many operations create objects that are dependent on a previously existing object. In this case, the Tree View shows this relationship by absorbing the older object inside the new object. Expanding and collapsing the objects in the Tree View shows the parametric history of that object. Objects that are deeper inside others are older, while objects that are outside are newer, and are derived from the older objects. By modifying the interior objects, the parametric operations propagate all the way to the top, generating a new result.
+</p><p>&#1052;&#1085;&#1086;&#1075;&#1086; &#1086;&#1087;&#1077;&#1088;&#1072;&#1094;&#1080;&#1080; &#1089;&#1098;&#1079;&#1076;&#1072;&#1074;&#1072;&#1090; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;, &#1082;&#1086;&#1080;&#1090;&#1086; &#1089;&#1072; &#1079;&#1072;&#1074;&#1080;&#1089;&#1080;&#1084;&#1080; &#1086;&#1090; &#1087;&#1088;&#1077;&#1076;&#1074;&#1072;&#1088;&#1080;&#1090;&#1077;&#1083;&#1085;&#1086; &#1089;&#1098;&#1097;&#1077;&#1089;&#1090;&#1074;&#1091;&#1074;&#1072;&#1097; &#1086;&#1073;&#1077;&#1082;&#1090;. &#1042; &#1090;&#1086;&#1079;&#1080; &#1089;&#1083;&#1091;&#1095;&#1072;&#1081; &#1076;&#1098;&#1088;&#1074;&#1086;&#1074;&#1080;&#1076;&#1085;&#1080;&#1103;&#1090; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072; &#1090;&#1072;&#1079;&#1080; &#1074;&#1088;&#1098;&#1079;&#1082;&#1072;, &#1082;&#1072;&#1090;&#1086; &#1072;&#1073;&#1089;&#1086;&#1088;&#1073;&#1080;&#1088;&#1072; &#1087;&#1086;-&#1089;&#1090;&#1072;&#1088;&#1080;&#1103; &#1086;&#1073;&#1077;&#1082;&#1090; &#1074;&#1098;&#1090;&#1088;&#1077; &#1074; &#1085;&#1086;&#1074;&#1080;&#1103; &#1086;&#1073;&#1077;&#1082;&#1090;. &#1056;&#1072;&#1079;&#1075;&#1098;&#1074;&#1072;&#1085;&#1077;&#1090;&#1086; &#1080; &#1087;&#1088;&#1080;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077;&#1090;&#1086; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;&#1090;&#1077; &#1074; &#1076;&#1098;&#1088;&#1074;&#1086;&#1074;&#1080;&#1076;&#1085;&#1080;&#1103; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072; &#1087;&#1072;&#1088;&#1072;&#1084;&#1077;&#1090;&#1088;&#1080;&#1095;&#1085;&#1072;&#1090;&#1072; &#1080;&#1089;&#1090;&#1086;&#1088;&#1080;&#1103; &#1085;&#1072; &#1090;&#1086;&#1079;&#1080; &#1086;&#1073;&#1077;&#1082;&#1090;. &#1054;&#1073;&#1077;&#1082;&#1090;&#1080;&#1090;&#1077;, &#1082;&#1086;&#1080;&#1090;&#1086; &#1089;&#1072; &#1087;&#1086;-&#1076;&#1098;&#1083;&#1073;&#1086;&#1082;&#1080; &#1074;&#1098;&#1090;&#1088;&#1077; &#1074; &#1076;&#1088;&#1091;&#1075;&#1080;&#1090;&#1077;, &#1089;&#1072; &#1087;&#1086;-&#1089;&#1090;&#1072;&#1088;&#1080;, &#1076;&#1086;&#1082;&#1072;&#1090;&#1086; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;&#1090;&#1077;, &#1082;&#1086;&#1080;&#1090;&#1086; &#1089;&#1072; &#1085;&#1072;&#1074;&#1098;&#1085;, &#1089;&#1072; &#1087;&#1086;-&#1085;&#1086;&#1074;&#1080; &#1080; &#1087;&#1088;&#1086;&#1080;&#1079;&#1083;&#1080;&#1079;&#1072;&#1090; &#1086;&#1090; &#1087;&#1086;-&#1089;&#1090;&#1072;&#1088;&#1080;&#1090;&#1077; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;. &#1063;&#1088;&#1077;&#1079; &#1084;&#1086;&#1076;&#1080;&#1092;&#1080;&#1094;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; &#1085;&#1098;&#1090;&#1088;&#1077;&#1096;&#1085;&#1080;&#1090;&#1077; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;, &#1087;&#1072;&#1088;&#1072;&#1084;&#1077;&#1090;&#1088;&#1080;&#1095;&#1085;&#1080;&#1090;&#1077; &#1086;&#1087;&#1077;&#1088;&#1072;&#1094;&#1080;&#1080; &#1089;&#1077; &#1088;&#1072;&#1079;&#1087;&#1088;&#1086;&#1089;&#1090;&#1088;&#1072;&#1085;&#1103;&#1074;&#1072;&#1090; &#1095;&#1072;&#1082; &#1076;&#1086; &#1074;&#1098;&#1088;&#1093;&#1072;, &#1075;&#1077;&#1085;&#1077;&#1088;&#1080;&#1088;&#1072;&#1081;&#1082;&#1080; &#1085;&#1086;&#1074; &#1088;&#1077;&#1079;&#1091;&#1083;&#1090;&#1072;&#1090;.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_parametric_history.png&amp;filetimestamp=20240720173407&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_parametric_history.png" decoding="async" width="298" height="230" class="mw-file-element" data-file-width="298" data-file-height="230"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">The topmost object is created by doing parametric operations on objects which themselves were created by previous operations.<br>
@@ -155,12 +155,12 @@ Fully expanding the tree reveals the original elements that were used to create 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117203747
+Cached time: 20260117204148
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.116 seconds
-Real time usage: 0.179 seconds
+CPU time usage: 0.121 seconds
+Real time usage: 0.157 seconds
 Preprocessor visited node count: 747/1000000
 Post&#8208;expand include size: 37949/2097152 bytes
 Template argument size: 12168/2097152 bytes
@@ -171,19 +171,19 @@ Unstrip post&#8208;expand size: 2222/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   39.210      1 -total
- 23.52%    9.221      1 Template:Std_Base_navi/bg
- 17.61%    6.906      3 Template:Navigation_menu_2
- 14.72%    5.770      1 Template:Interface_navi/bg
- 11.90%    4.667      1 Template:PropertyView
-  9.78%    3.836      1 Template:Userdocnavi/bg
-  8.38%    3.287      2 Template:PropertyData
-  5.62%    2.203      3 Template:Variable
-  5.20%    2.039      1 Template:TOCright
-  4.88%    1.913      2 Template:Caption
+100.00%   34.542      1 -total
+ 24.24%    8.372      1 Template:Std_Base_navi/bg
+ 21.38%    7.385      3 Template:Navigation_menu_2
+ 17.72%    6.121      1 Template:Interface_navi/bg
+ 13.41%    4.632      1 Template:Userdocnavi/bg
+  8.26%    2.852      2 Template:PropertyData
+  5.93%    2.047      1 Template:PropertyView
+  5.52%    1.907      3 Template:Variable
+  4.87%    1.682      2 Template:Caption
+  4.41%    1.525     19 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260117203746 and revision id 1739669. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260117204148 and revision id 1739671. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
